Add hCaptcha keys to .env file

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-SECRET_KEY=yoursecretkey123
+HCAPTCHA_SITE_KEY=cabc1aaa-e990-40e2-834e-e5ba60204606
+HCAPTCHA_SECRET=ES_3c0062eb05bd4469b61eae227109548f
+\SECRET_KEY=yoursecretkey123
 DATABASE_URL=sqlite:///instance/lostnfound_clean.db
